--- a/styles/style.css
+++ b/styles/style.css
@@ -2,28 +2,38 @@
 @import url(boot-aux.css);
 @import url(animations.css);
 
-#content {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    animation: fadeInAnimation 1s ease-in forwards;
-}
-
+/* Espaço do Conteúdo */
 main {
     height: 90vh;
     position: relative;
 }
 
-/* Navbar */
-.navbar {
-    height: 10vh;
+/* ***************** */
+/* Cabeçalho Navbar */
+/* ***************** */
+.navbar { 
+    height: 10vh; 
+}
+
+#header-navbar li:nth-child(-n+3) a::after {
+    content: ' • ';
+}
+
+/* Local do Conteúdo */
+#content {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    animation: fadeInAnimation 1s ease-in forwards;
+    overflow-y: auto;
 }
 
 #main-header h1 {
     color: gold;
 }
 
-.image-background {
+/* Fundo com as Imagens */
+#image-background {
     position: absolute;
     height: 90vh;
     width: 100%;
@@ -35,13 +45,17 @@ main {
     background-position: center; /* Centraliza a imagem */
     z-index: 0;
 }
-.image-foreground {
+/* Fundo semi-opaco na frente do fundo das imagens */
+#image-foreground {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .80);
 }
 
-.main_container {
+/* *************** */
+/* Início da página */
+/* *************** */
+.home-container {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -49,13 +63,6 @@ main {
     align-items: center;
     padding: 2% 0;      
     position: relative; /* Para garantir que o conteúdo fique acima do fundo */  
-}
-
-/* *************** */
-/* Cabeçalho Navbar */
-/* *************** */
-#header-navbar li:nth-child(-n+3) a::after {
-    content: ' • ';
 }
 
 /* *************** */
@@ -72,11 +79,12 @@ main {
     opacity: 0;
     animation: fadeInAnimation 1s ease-in forwards;
     font-size: .8vw;
-}
-.character-card img {
-    max-height: 250px;
-    max-width: 250px;
-    align-self: center;
+    
+    img {
+        max-height: 230px;
+        max-width: 250px;
+        align-self: center;
+    }
 }
 
 /* Customiza a barra de rolagem */
