Refactor: Separei os componentes em novo arquivo. Agora já está renderizando a lista de modelos e podendo selecionar entre eles

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -16,5 +16,5 @@
 
 .fade-in {
     opacity: 0;
-    animation: fadeInAnimation 1s ease-in forwards;
+    animation: fadeInAnimation 1s ease-in-out forwards;
 }
