--- a/styles/Sheets Styles/marvel-style.css
+++ b/styles/Sheets Styles/marvel-style.css
@@ -1,4 +1,3 @@
-
 /* ************************* */
 /* Container das Páginas */
 /* ************************* */
@@ -13,6 +12,10 @@
         transform-origin: top left;
         position: absolute;
         left: 0;
+    }
+
+    h2, h3 {
+        font-family: 'Nexa Slab Black';
     }
 }
 
@@ -31,7 +34,7 @@
     gap: 1mm;
     font-size: 14px;;
     
-    background: no-repeat url(../../images/marvel-background.jpg);
+    background: no-repeat url(../../images/sheets/marvel-background.jpg);
     background-size: cover;
     page-break-after: always;
 }
@@ -78,6 +81,7 @@
     color: #eee;
     background-color: rgba(1, 1, 1, .8);
     padding: .25rem .5rem;
+    font-family: 'Nexa Slab Black';
 }
 
 /* ******************************************* */
@@ -91,8 +95,8 @@
 
 #skills-advs { padding: 1rem .25rem; }
 #skills, #advantages { padding: 1rem .5rem; }
-#power-list-page1 { padding: 0 1rem; }
-#power-list-page2 { padding: 1rem 0; }
+#content-listing-page1 { padding: 0 1rem; }
+#content-listing-page2 { padding: 1rem 0; }
 
 /* ******************************************* */
 /* Habilidades */
@@ -193,13 +197,9 @@
 }
 
 /* ******************************************* */
-/* Vantagens */
-/* ******************************************* */
-
-/* ******************************************* */
 /* Poderes */
 /* ******************************************* */
-.power-listing {
+.content-listing {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -213,7 +213,7 @@
     
     header {
         font-size: 18px;
-        color: #4f84e7;
+        color: #063c9e;
         font-weight: bold;
     }
     
@@ -223,11 +223,31 @@
 }
 
 .gold-bold {
+    font-size: 14px;
     font-weight: bold;
     color: darkgoldenrod;
 }
 
-.child-power, .alternate-power {
+.darkred-bold {
+
+    > b:first-of-type {
+        font-size: 14px;
+        font-weight: bold;
+        color: darkred;
+    }
+}
+
+.darkgreen-bold {
+
+    > b:first-of-type {
+        font-size: 14px;
+        font-weight: bold;
+        color: darkgreen;
+    }
+}
+
+/* Poderes Alternativos e/ou Poderes em Grupos */
+.child-power {
     padding-left: 1rem;
     padding-right: 1rem;
 
@@ -235,3 +255,7 @@
         font-size: 14px;
     }
 }
+
+/* ******************************************* */
+/* Equipamentos */
+/* ******************************************* */
