--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 /* Espaço do Conteúdo */
 main {
     height: 90vh;
+    width: 100vw;
     position: relative;
 }
 
@@ -105,12 +106,39 @@ main {
 }
 
 /* ********************************* */
-/* Container da Ficha */
+/* Container da Página das fichas */
 /* ********************************* */
+#sheet-models-block {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    gap: 1rem;
+}
+
+/* ********************************* */
+/* Container da Ficha */
 #sheet-container {
     margin-left: 1rem;
-    height: 80%;
+    height: 100%;
     min-width: 450px;
     max-width: 40%;
     overflow-y: auto;
+    overflow-x: hidden;
+}
+
+/* ********************************* */
+/* Container da Modelos */
+#sheet-templates {
+    background-color: rgba(80, 80, 80, .80);
+    border-radius: .5rem;
+    padding: 1rem;
+    /* width: max(fit-content, 50%); */
+    min-width: 450px;
+    max-width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.template-sheet-card {
+    cursor: pointer;
 }
